# msg

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
msg/: __main__.py  broker.py  monitoring.py  persistence.py  protocol.py
src/msg/: __init__.py  __main__.py  broker.py  utils.py
tests/: test_persistence.py
