[project]
name = "msg"
version = "0.1.0"
description = "A simple, extensible Python message broker."
authors = [
    { name = "Adel Rahimi", email = "noemail@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["msg"]

[tool.ruff]
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
